[gd_scene load_steps=10 format=3 uid="uid://bsdntorawtqm3"]

[ext_resource type="Script" path="res://GUI/MainMenu/mainmenu.gd" id="1_61a3i"]
[ext_resource type="Texture2D" uid="uid://b4qsmopb2bmal" path="res://Assets/Mainmenu/BG_Image1.png" id="1_ud45x"]
[ext_resource type="Texture2D" uid="uid://cqbqgu6fj4pk3" path="res://Assets/Mainmenu/Game_Title.png" id="2_2xm8i"]
[ext_resource type="Script" path="res://Scripts/AudioController.gd" id="4_clnc0"]
[ext_resource type="AudioStream" uid="uid://t0m22hsscbyd" path="res://GUI/MainMenu/main_menu_bgm.mp3" id="4_up7hp"]
[ext_resource type="Script" path="res://Scripts/FullscreenToggler.gd" id="5_irddq"]

[sub_resource type="SystemFont" id="SystemFont_l4cv8"]
font_names = PackedStringArray("PixelWarden")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nna2t"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_msqyk"]
color = Color(0.556863, 0.337255, 0.231373, 1)
thickness = 6

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61a3i")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ud45x")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -782.0
offset_top = -202.5
offset_right = -62.0
offset_bottom = 202.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_2xm8i")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 38.0
offset_top = -90.0
offset_right = 353.0
offset_bottom = 90.0
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Play_btn" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_l4cv8")
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="Settings_btn" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_l4cv8")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Quit_btn" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_l4cv8")
theme_override_font_sizes/font_size = 24
text = "Quit
"

[node name="Settings" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -196.0
offset_right = 251.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabelPanel" type="Panel" parent="Settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="SettingLabel" type="Label" parent="Settings/SettingsLabelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_l4cv8")
theme_override_font_sizes/font_size = 22
text = "Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseBtn" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
text = "[X] Close
"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -51.0
offset_right = 125.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="AudioController" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_nna2t")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_msqyk")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_msqyk")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_clnc0")
audio_bus_name = "Music"

[node name="FullscreenToggler" type="CheckButton" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Fullscreen
"
script = ExtResource("5_irddq")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_up7hp")
pitch_scale = 0.8
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainButtons/Play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MainButtons/Settings_btn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainButtons/Quit_btn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Settings/CloseBtn" to="." method="_on_close_btn_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxContainer/AudioController" to="Settings/VBoxContainer/HBoxContainer/AudioController" method="_on_value_changed"]
[connection signal="toggled" from="Settings/VBoxContainer/FullscreenToggler" to="Settings/VBoxContainer/FullscreenToggler" method="_on_toggled"]
